approx 20% done refactoring program to use MS Access database and OleDbAdapters. Access SQL is weird, yo.

--- a/CustomerRecordsApp.Data/CustomerRecordsApp.Data.csproj
+++ b/CustomerRecordsApp.Data/CustomerRecordsApp.Data.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Access\Scripts.cs" />
+    <Compile Include="Azure\Customer.cs" />
     <Compile Include="ConnectionAccess.cs" />
-    <Compile Include="Customer.cs" />
+    <Compile Include="Access\Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
