--- a/CustomerRecordsApp/CustomerRecordsApp.csproj
+++ b/CustomerRecordsApp/CustomerRecordsApp.csproj
@@ -65,6 +65,18 @@
     <Compile Include="formAlertView.Designer.cs">
       <DependentUpon>formAlertView.cs</DependentUpon>
     </Compile>
+    <Compile Include="InputForms\NewAlert.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InputForms\NewAlert.Designer.cs">
+      <DependentUpon>NewAlert.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InputForms\NewCustomer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InputForms\NewCustomer.Designer.cs">
+      <DependentUpon>NewCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="InputForms\NewNotes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +94,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formAlertView.resx">
       <DependentUpon>formAlertView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InputForms\NewAlert.resx">
+      <DependentUpon>NewAlert.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InputForms\NewCustomer.resx">
+      <DependentUpon>NewCustomer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InputForms\NewNotes.resx">
       <DependentUpon>NewNotes.cs</DependentUpon>
