--- a/CustomerRecordsApp/CustomerRecordsApp.csproj
+++ b/CustomerRecordsApp/CustomerRecordsApp.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{27F7A19C-EF61-4850-A366-38836CDE094A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>CustomerRecordsApp</RootNamespace>
-    <AssemblyName>CustomerRecordsApp</AssemblyName>
+    <AssemblyName>NEW CMS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
