--- a/CustomerRecordsApp/CustomerRecordsApp.csproj
+++ b/CustomerRecordsApp/CustomerRecordsApp.csproj
@@ -86,6 +86,18 @@
     <Compile Include="InputForms\NewNotes.Designer.cs">
       <DependentUpon>NewNotes.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuForms\About.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuForms\About.Designer.cs">
+      <DependentUpon>About.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuForms\OptionConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuForms\OptionConfig.Designer.cs">
+      <DependentUpon>OptionConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UtilityClasses\ConnectionAccess.cs" />
@@ -106,6 +118,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="InputForms\NewNotes.resx">
       <DependentUpon>NewNotes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuForms\About.resx">
+      <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuForms\OptionConfig.resx">
+      <DependentUpon>OptionConfig.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
