updated application to reflect a network shared file rather than one on a local machine.

--- a/CustomerRecordsApp/App.config
+++ b/CustomerRecordsApp/App.config
@@ -12,7 +12,7 @@
 
     <add name="AccessDB"
         connectionString="Provider=Microsoft.ACE.OLEDB.12.0;
-        Data Source=C:\Source\Repos\CustomerRecords\CustomerRecordsApp.Data\bin\NEW Staging DB.accdb;Persist Security Info=True"
+        Data Source=\\NCW-D6412\Databases\NEW Staging DB.accdb;Persist Security Info=True"
 
         providerName="System.Data.OleDb" />
 
